[gd_scene load_steps=11 format=3 uid="uid://deumqv45tje5v"]

[ext_resource type="Script" path="res://barkley2/scenes/CC/cc_placenta.gd" id="1_bwxv3"]
[ext_resource type="PackedScene" uid="uid://17ju2lwljq2s" path="res://barkley2/scenes/CC/cc_particle_1.tscn" id="2_efae1"]
[ext_resource type="Texture2D" uid="uid://d05irhes0n1vr" path="res://barkley2/assets/b2_original/images/cc/s_cc_placenta_tree_0.png" id="3_s1ufm"]
[ext_resource type="Texture2D" uid="uid://bwll06ovikjk3" path="res://barkley2/assets/b2_original/images/cc/s_cc_placenta_tree_1.png" id="4_5f6g6"]
[ext_resource type="Texture2D" uid="uid://c2cfaqcqyn4mq" path="res://barkley2/assets/b2_original/images/cc/s_cc_placenta_tree_2.png" id="5_krgob"]
[ext_resource type="Texture2D" uid="uid://c6fbgfkw3rkuj" path="res://barkley2/assets/b2_original/images/cc/s_cc_placenta_tree_3.png" id="6_70n41"]
[ext_resource type="Texture2D" uid="uid://dkagxipej6oic" path="res://barkley2/assets/b2_original/images/cc/s_cc_placenta_tree_4.png" id="7_caefy"]
[ext_resource type="Texture2D" uid="uid://bu57bx1dkew57" path="res://barkley2/assets/b2_original/images/cc/s_cc_placenta_frames_0.png" id="8_21sni"]
[ext_resource type="Theme" uid="uid://dgl808q5lpydb" path="res://barkley2/themes/main.tres" id="9_6ocpa"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bmnff"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_s1ufm")
}, {
"duration": 1.0,
"texture": ExtResource("4_5f6g6")
}, {
"duration": 1.0,
"texture": ExtResource("5_krgob")
}, {
"duration": 1.0,
"texture": ExtResource("6_70n41")
}, {
"duration": 1.0,
"texture": ExtResource("7_caefy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="cc_placenta" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bwxv3")

[node name="Particle_1" parent="." instance=ExtResource("2_efae1")]

[node name="tree" type="AnimatedSprite2D" parent="."]
position = Vector2(192, 95)
sprite_frames = SubResource("SpriteFrames_bmnff")

[node name="frame_bg" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 120.0
offset_top = 187.0
offset_right = 263.0
offset_bottom = 230.0
color = Color(0.235294, 0, 0.352941, 0.501961)

[node name="frame" type="Sprite2D" parent="frame_bg"]
position = Vector2(72, 20)
texture = ExtResource("8_21sni")

[node name="continue_cc" type="Button" parent="frame_bg/frame"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -43.0
offset_right = -11.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 6)
theme = ExtResource("9_6ocpa")
theme_override_colors/font_pressed_color = Color(0.309804, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
text = "Continue growing"

[node name="live" type="Button" parent="frame_bg/frame"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -25.0
offset_right = -11.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_6ocpa")
theme_override_colors/font_pressed_color = Color(0.309804, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
text = "Begin living"

[connection signal="pressed" from="frame_bg/frame/continue_cc" to="." method="_on_continue_cc_pressed"]
[connection signal="pressed" from="frame_bg/frame/live" to="." method="_on_live_pressed"]
